--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xxj</groupId>
-    <artifactId>zykczhsx</artifactId>
+    <artifactId>zykczhsx4-1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
